# ChatExample

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  QtSimpleChat.pri  QtSimpleChat.pro  QtSimpleChatClient.pro  QtSimpleChatServer.pro  README.markdown  chatclient.cpp  chatclient.h  chatserver.cpp  chatserver.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  servermain.cpp  serversocket.cpp  serversocket.h  serverworker.cpp  serverworker.h
.github/workflows/: buildcmake.yml  buildqmake.yml
QtSimpleChat/: QtSimpleChat.pro  chatmessage.cpp  chatmessage.h  chatserver.cpp  chatserver.h  chatsession.cpp  chatsession.h  qtsimplechat.h  serverwindow.cpp  serverwindow.h
QtSimpleChatClient/: CMakeLists.txt  QtSimpleChatClient.pro  chatclient.cpp  chatclient.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  clientmain.cpp
QtSimpleChatServer/: CMakeLists.txt  QtSimpleChatServer.pro  chatserver.cpp  chatserver.h  servermain.cpp  serverwindow.cpp  serverwindow.h  serverwindow.ui  serverworker.cpp  serverworker.h
QtSimpleChatServerThreaded/: CMakeLists.txt  QtSimpleChatServerThreaded.pro  chatserver.cpp  chatserver.h  chatserverthreaded.cpp  chatserverthreaded.h  servermain.cpp  serverthreadedmain.cpp  serverwindow.cpp  serverwindow.h  serverworker.cpp  serverworker.h  threadpool.cpp  threadpool.h
